@@ -36,7 +36,7 @@ public interface DoubleCollector<A, R> {
         final var identityFinish = Collector.Characteristics.IDENTITY_FINISH;
         var cs = (characteristics.length == 0)
                 ? Set.of(identityFinish)
-                : Collections.unmodifiableSet(EnumSet.of(identityFinish, characteristics));
+                : Set.copyOf(EnumSet.of(identityFinish, characteristics));
         return new DoubleCollectorImpl<>(supplier, accumulator, combiner, cs);
     }
 
